--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.1.0
+patsy==0.5.3
 Pillow==10.0.0
 protobuf==4.24.2
 pyasn1==0.5.0
@@ -42,6 +43,7 @@ rsa==4.9
 scikit-learn==1.3.0
 scipy==1.11.2
 six==1.16.0
+statsmodels==0.14.0
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 tensorflow==2.13.0
