--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ protobuf==4.24.2
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 Pygments==2.16.1
