--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ decorator==5.1.1
 executing==1.2.0
 flatbuffers==23.5.26
 fonttools==4.42.1
+fsspec==2023.10.0
 gast==0.4.0
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
